--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -31,7 +31,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\Tree.cs" />
+    <Compile Include="Tree.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
