Add Remove and Reverse to Mylist

--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Tree.cs" />
+    <Compile Include="MyList.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
