Editing sorting by insert

--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -33,6 +33,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Tree.cs" />
     <Compile Include="MyList.cs" />
+    <Compile Include="SortByInserts.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
